@@ -1,3 +1,11 @@
+2008-04-08  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* Makefile.am: Add NO_DOCS option as
+	appropriate to ICEDTEA_ENV and ICEDTEA_ENV_ECJ
+	* Makefile.in: Regenerated.
+	* configure: Likewise.
+	* configure.ac: Add --disable-docs option.
+
 2008-04-07  Joshua Sumali  <jsumali@redhat.com>
 
 	* patches/icedtea-netx-plugin.patch: Removed reflection hunk.
